[package]
name = "andes-riscv"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/embedded-drivers/andes-riscv"
documentation = "https://docs.rs/andes-riscv"
homepage = "https://github.com/embedded-drivers/andes-riscv"
categories = ["embedded", "no-std", "hardware-support"]
description = "Low level access to Andes' AndeStar V5 RISC-V processors"
keywords = ["andes", "riscv"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
